@@ -1,8 +1,11 @@
 apport (0.16) edgy; urgency=low
 
   *  test-apport: Check that non-packaged binaries do not generate a report.
+  * apport_utils.py: Add find_file_package() to find the package a file
+    belongs to. This uses fgrep /var/lib/dpkg/info/*.list which is much faster
+    than dpkg -S. Also add test suite check.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 21 Aug 2006 10:08:51 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 21 Aug 2006 11:27:48 +0200
 
 apport (0.15) edgy; urgency=low
 
